# ai4wechat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo-script.md  demo-sender.py  demo-wechat-conversation.md  demo-操作手册.md
docs/promo/: x-thread.md  xiaohongshu.md  zhihu.md
examples/: bridge_existing_service.py  bridge_openai_service.py  echo_bot.py  http_media_echo.py  keyword_bot.py  sdk_openai_bot.py
src/ai4wechat/: __init__.py  bot.py  client.py  formatter.py  http_adapter.py  login.py  types.py
tests/: test_client.py  test_formatter.py  test_http_adapter.py  test_types.py
